src/assets/css/style.css
body,
input,
button,
select,
textarea {
    font-family: 'Outfit', sans-serif;
    font-size: 18px;
}

.card-header-title {
    gap: 10px;
}

table.is-bordered tr:last-child td,
.table.is-bordered tr:last-child th,
.table.is-narrow td,
.table.is-narrow th {
    padding: 0.6em 0.5em;
}

.table thead th {
    font-weight: 500;
}

pre.block {
    padding: 20px;
    margin: 0 0 10px 0;
    line-height: 1.3;
}

.bar-chart {
    display: flex;
    border: 1px solid #ccc;
    height: 300px;
    margin-top: 10px;
    width: 100%;
    overflow: hidden;
    gap: 10px;
    padding: 10px;
}

.bar-segment:hover {
    background-color: #485fc7;
}

.bar-segment {
    display: flex;
    justify-content: center;
    align-items: flex-end;
    background-color: #3850b7;
    color: #fff;
    font-size: 14px;
    width: calc(100% / var(--num-segments));
    transition: height 0.2s;
    padding: 8px 10px;
    flex-grow: 1;
    border-radius: 10px;
}

pre.block,
.card,
.bar-chart {
    border-radius: 10px;
}

.card-header {
    box-shadow: none;
}

.card-content {
    padding: 1rem 1.5rem;
}

.badge {
    display: inline-flex;
    align-items: center;
    gap: 5px;
    background-color: #f2f2f2;
    padding: 2px 8px;
    border-radius: 20px;
}

p span.badge {
    position: relative;
    top: 4px;
}

.flex-list {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 5px;
}

.badges {
    display: flex;
    gap: 10px;
    align-items: center;
}

.flex-grid {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
}

.flex-grid-item {
    flex: 1;
}

.footer {
    background-color: transparent;
}

.navbar-menu {
    display: initial !important;
    background-color: transparent;
    box-shadow: none;
    padding: initial;
}

.navbar {
    display: flex;
    justify-content: space-between;
}

.flex {
    display: flex;
    align-items: center;
    gap: 10px;
}

.click {
    cursor: pointer;
}

.bar-segment.bar-segment--medium {
    background-color: #455dc5;
}

.bar-segment.bar-segment--low {
    background-color: #5d77e7;
}

.bar-segment.bar-segment--very-low {
    background-color: #768ffb;
}

